--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         Yenigun Mah · Ugur Mumcu cad, No:101/2, Buca/IZMIR  · +90 (552) 369 4435 ·
                         <a href="burak.colak.yes@gmail.com">burak.colak.yes@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am on of the Culture Ambassador of Turkey & United States (PA, Pittsburgh) and Electrical Engineer, also programmer and electric components hobbyist. Also I am a blogger. And have a huge interest to learning anything about tech.
-                        And Answer to the Ultimate Question of Life, the Universe, and Everything is "42". No more no less. (Yes it's a string)</p>
+                    <p class="lead mb-5">Electrical Engineer | Culture Ambassador of Turkey-United States</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/burakcolak/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Barakolak"><i class="fab fa-github"></i></a>
@@ -64,35 +63,40 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                            <h3 class="mb-0">C Programming</h3>
+                            <div class="subheading mb-3">Basic C</div> 
+                            <p> ➢Free Code Camp
+                                ➢University of Pecs
+                                </p>                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2018 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                            <h3 class="mb-0">Python</h3>
+                            <div class="subheading mb-3">v3.+</div> 
+                            <p> ➢Istanbul Institute of Business
+                                ➢ Matplotlib.
+                                ➢ Qiskit (IBM Quantum Computer)**
+                                ➢ Harvard CS50</p>                       </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">HTML & CSS & JS</h3>
+                            <div class="subheading mb-3">Web Development</div>
+        
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">C#</h3>
+                            <div class="subheading mb-3">Unity Game Programming</div>
+                            <p>➢ Istanbul Institute of Business
+                                ➢ Harvard CS50
+                                ➢ Unity</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - Present</span></div>
                     </div>
                 </div>
             </section>
@@ -124,31 +128,17 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
+                    <h2 class="mb-5">SKILLS</h2>
+                   
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Team player
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Problem Solving
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -156,7 +146,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Critical Thinking
                         </li>
                     </ul>
                 </div>
@@ -166,8 +156,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p> I am on of the Culture Ambassador of Turkey & United States (PA, Pittsburgh) and Electrical Engineer, also programmer and electric components hobbyist.</p>
+                    <p class="mb-0"> Also I am a blogger. And have a huge interest to learning anything about tech.
+                        And Answer to the Ultimate Question of Life, the Universe, and Everything is "42". No more no less. (Yes it's a string) </p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -188,32 +179,12 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Place - MEB ABDGIM (TC MEB Avrupa Birliği ve Dış İlişkiler Genel Müdürlüğü) higher science-engineering education abroad full-scholarship winner
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
+                            Stipendihum Hungaricum full-scholarship awarde
+                        <
                     </ul>
                 </div>
             </section>
