--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Colak</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Yenigun Mah · Ugur Mumcu cad, No:101/2, Buca/IZMIR  · +90 (552) 369 4435 ·
+                        Buca/IZMIR · Pecs/Hungary · +90 (552) 369 4435 ·
                         <a href="burak.colak.yes@gmail.com">burak.colak.yes@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Electrical Engineer | Culture Ambassador of Turkey-United States</p>
